@@ -27,6 +27,8 @@ Version 1.0.xxx (May xxth 2013)
 - Implemented: Application Settings, Notification Interval for Sensors/Switches
 - Implemented: support for 1-Wire with hubs
 - Implemented: 1-Wire Humidity sensors
+- Implemented: 1-Wire aux sub-folders
+- Changed: command line parameter -logfile is not -log (do not enable logging, only if needed, use the application log viewer)
 
 Version 1.0.607 (May 11th 2013)
 - Changed: Rego6XX Type setting moved to the hardware settings in the same way as RFXtrx setup is done
